--- a/HAproxy/templates/haproxy_new.cfg.erb
+++ b/HAproxy/templates/haproxy_new.cfg.erb
@@ -18,32 +18,45 @@ defaults
   timeout connect 5000
   timeout client  50000
   timeout server  50000
-  <% if @http_back == true %>
+  option redispatch
+<% if @http_back == true %>
   option  httplog
   option httpclose
   option forwardfor
-  <% end %>
-  <% if @redis_back == true %>
-  option redispatch
-  <% end %>
+<% end %>
+  default_backend def_back
 
-<% if !@frontend.empty?%>
-<% @frontend.each do |var| %>
-frontend <%= var['name'] %>-frontend
-  mode <%= var{'mode'] %>
-  bind <%= var{'address'] %>:<%= var{'port'] %>
-  default_backend <%= var['name'] %>-backend
+<% if !@frontend.empty? %>
+<% @frontend.each do |front| %>
+  frontend <%= front['name'] %>-frontend
+    mode <%= front['mode'] %>
+    bind <%= front['address'] %>:<%= front['port'] %>
+  <% if front.has_key?('acl_name') %>
+    acl <%= front['acl_name'] %> <%= front['acl_rule'] %>
+    use_backend <%= front['acl_name'] %>-backend
+  <% else %>
+    use_backend <%= front['name'] %>-backend
+  <% end %>
 <% end %>
 
-<% if !@frontend.empty?%>
+<% if !@frontend.empty? %>
 <% @frontend.each do |back| %>
-backend <%= back['name'] %>-backend
-  mode <%= back{'mode'] %>
-  <% if !back['check'].empty? %>
+<% if back.has_key?('acl_name') %>
+   <% @name == back['acl_name'] %>
+<% else %>
+   <% @name == back['name'] %>
+<% end %>
+  backend <%= @name %>-backend
+  mode <%= back['mode'] %>
+  <% if back.has_key?('check') %>
   back['check']
   <% end %>
   <% @server.each do |srv| %>
-  <% if srv['front'] == back['name'] %>
-  server <%= srv['servername'] %> <%= srv['ip'] %>:<%= srv['port'] %> <% if !srv['maxconn'].empty? %> maxconn <% srv['maxconn'] %><% end %> check inter 3s
+    <% if srv['front'] == @name %>
+      server <%= srv['servername'] %> <%= srv['ip'] %>:<%= srv['port'] %> <% if srv.has_key?('maxconn') %> maxconn <% srv['maxconn'] %><% end %><% if srv.has_key?('time_check') %> check inter <% srv['time_check'] %><% end %>
+    <% end %>
   <% end %>
-<% end -%>
+<% end %>
+
+backend def_back
+  server 127.0.0.1:666
