--- a/HAproxy/templates/haproxy_new.cfg.erb
+++ b/HAproxy/templates/haproxy_new.cfg.erb
@@ -6,9 +6,9 @@ global
   group           <%= @gl_group %>
   daemon
   stats socket /var/lib/haproxy/stats
-  <% if !@gl_custom.empty? -%>
+<% if !@gl_custom.empty? -%>
   <%= @gl_custom %>
-  <% end -%>
+<% end -%>
 
 defaults
   log              global
@@ -37,9 +37,11 @@ defaults
 frontend <%= front['name'] %>-frontend
   mode <%= front['mode'] %>
   bind <%= front['address'] %>:<%= front['port'] %>
-<% if front.has_key?('acl_name') -%>
-  acl <%= front['acl_name'] %>-acl <%= front['acl_rule'] %>
-  use_backend <%= front['acl_name'] %>-backend if <%= front['acl_name'] %>-acl
+<% if front.has_key?('acl') -%>
+<% front['acl'].each do |acl| -%>
+  acl <%= acl['acl_name'] %>-acl <%= acl['acl_rule'] %>
+  use_backend <%= acl['acl_name'] %>-backend if <%= acl['acl_name'] %>-acl
+<% end -%>
 <% else -%>
   use_backend <%= front['name'] %>-backend
 <% end %>
@@ -47,23 +49,31 @@ frontend <%= front['name'] %>-frontend
 <% end -%>
 <% if !@frontend.empty? -%>
 <% @frontend.each do |back| -%>
-<% if back.has_key?('acl_name') -%>
-<% @name=back['acl_name'] %>
-<% else -%>
-<% @name=back['name'] %>
+<% if back.has_key?('acl') -%>
+<% back['acl'].each do |acl| -%>
+backend <%= acl['acl_name'] %>-backend
+<% if acl.has_key?('acl_check') -%>
+  <%= acl['acl_check'] %>
 <% end -%>
-backend <%= @name %>-backend
+<% @server.each do |srv| -%>
+<% if srv['front'] == acl['acl_name'] -%>
+  server <%= srv['servername'] %> <%= srv['ip'] %>:<%= srv['port'] %> <% if srv.has_key?('maxconn') %> maxconn <%= srv['maxconn'] %><% end %><% if srv.has_key?('time_check') %> check inter <%= srv['time_check'] %><% end %>
+<% end -%>
+<% end %>
+<% end -%>
+<% else %>
+backend <%= back['name'] %>-backend
   mode <%= back['mode'] %>
 <% if back.has_key?('check') -%>
   <%= back['check'] %>
 <% end -%>
 <% @server.each do |srv| -%>
-<% if srv['front'] == @name -%>
+<% if srv['front'] == back['name'] -%>
   server <%= srv['servername'] %> <%= srv['ip'] %>:<%= srv['port'] %> <% if srv.has_key?('maxconn') %> maxconn <%= srv['maxconn'] %><% end %><% if srv.has_key?('time_check') %> check inter <%= srv['time_check'] %><% end %>
 <% end -%>
+<% end %>
 <% end -%>
 <% end -%>
 <% end -%>
-
 backend def_back
   server <%= @def_backend %>
